overflow x fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
+.sr{
+
+  overflow-x: hidden !important;
+}
 
 body {
   position: relative;
